Move most .js into lib/

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "mz": "^2.7.0",
     "node-persist": "^3.0.2"
   },
-  "main": "main.js",
+  "main": "lib/main.js",
   "bin": {
     "fluffer": "bin/fluffer"
   }
