--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "googleapis": "^36.0.0",
     "html-to-text": "^4.0.0",
     "moment": "^2.23.0",
-    "mz": "^2.7.0",
     "node-persist": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=11.0.0"
   },
   "main": "lib/main.js",
   "bin": {
